fixed unwanted whitespace in mobile view

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+html,body{
+    width:100%;
+    overflow-x:hidden;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -184,7 +189,8 @@
 }
 
 /* insert Media query */
-@media only screen and (max-device-width: 600px) {
+@media only screen and (max-device-width: 900px) {
+
     .container{
         grid-template-columns: 1fr;
         grid-template-areas: 
@@ -218,8 +224,15 @@
 }
 
 @media only screen 
-and (min-device-width : 601px) 
-and (max-device-width: 992px){
+and (min-device-width : 901px) 
+and (max-device-width: 1100px){
+    .container {
+        grid-template-areas: 
+        "header header"
+        "digital analog"
+        "footer footer";
+    }
+
     .date {
         font-size: 1.5rem;
     }
@@ -239,29 +252,3 @@ and (max-device-width: 992px){
   
 }
 
-@media only screen 
-and (min-device-width : 993px) 
-and (max-device-width: 1100px){
-    .container {
-        grid-template-areas: 
-        "header header"
-        "digital analog"
-        "footer footer";
-    }
-    .date {
-        font-size: 1.8rem;
-    }
-
-    .time {
-        font-size: 4.2rem;
-    }
-
-    #period {
-        font-size: 2.7rem;
-        padding: 0.2rem
-    }
-
-    .footer {
-        font-size: 1.4rem;
-    }
-}
